# TrianglesIntersection

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
E2E_tests/: from_rand1.in  from_rand2.in  not_full_inp.out  two_ls.in  two_ls1.in  two_ps.in  two_ps1.in  two_tr.in  two_tr1.in  wrong_inp1.in  wrong_inp2.in
inc/: driver.hpp  triangles.hpp
scripts/: check_with_ref.sh  desmos_helper.py  gen_random_test.py  gen_set_trs.py  picker.py  ref_triangle_intsc.py  runE2Etest.sh
src/: benchmark.cpp  driver.cpp  main.cpp  triangles.cpp  trinangles.cpp  unit_tests.cpp
